[package]
name = "client"
version = "0.1.0"
authors = ["jtjohn24 <jtjohn24@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
rand = "0.7.3"
simple_logger = "1.4.0"
assigner = { git = "https://github.com/599C-20wi/assigner" }
task = { git = "https://github.com/599C-20wi/task" }
